# cpp-utils

./: .gitignore  CMakeLists.txt  LICENSE
include/: cpp_utils.hpp
include/config/: def.hpp
include/memory/allocator/: allocator.hpp  object_traits.hpp  standard_policy.hpp
include/traits/: add_rvalue_reference.hpp  bool_utils.hpp  declval.hpp  enable_if.hpp  is_complete.hpp  is_constructible.hpp  is_copy_constructible.hpp  is_destructible.hpp  is_function.hpp  is_lvalue_reference.hpp  is_referencable.hpp  is_reference.hpp  is_rvalue_reference.hpp  is_same.hpp  is_void.hpp  member_type_of.hpp  move.h  move.hpp  remove_reference.hpp  result_type.hpp  strong_type.hpp  traits.hpp  type.h  type_traits.hpp  type_traits_impl.hpp  type_utils.hpp  typed_constant.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  add_rvalue_reference_test.cpp  allocator_test.cpp  is_complete_test.cpp  is_constructible_test.cpp  is_function_test.cpp  strong_type_test.cpp
